fixed gui